elastic-stack/apm/03-apm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apm-ingress
  namespace: elastic-stack
  annotations:
    #cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  rules:
  - host: elastic-apm.ingress.mgmt
    http:
      paths:
      - backend:
          service:
            name: elastic-apm-http
            port:
              number: 8200
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - elastic-apm.ingress.mgmt
    secretName: ingress-mgmt
